<resources>
    <string name="app_name">BlueBerryHarvest</string>
    <string name="add_picker">Add Picker</string>
    <string name="add_bucket">Add Bucket</string>
    <string name="full_name">Full Name</string>
    <string name="weight">Weight</string>
    <string name="full_name_id">Name/ID</string>
    <string name="select_date">Select Date</string>
    <string name="change_date">Change Date</string>
    <string name="delete_line">Are you sure you want to delete this?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="delete_picker">Delete Picker</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="setting">Settings</string>
    <string name="export">Export Data</string>
    <string name="backup">Back Up Data</string>
    <string name="backup_email">Back Up Email:</string>
    <string name="export_email">Export Email:</string>
    <string name="email">Email</string>
    <string name="hint_name">New Full Name</string>
</resources>
