<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <AutoCompleteTextView
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_editview"
        android:hint="@string/full_name_id"/>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_picker"
        android:layout_below="@id/name_editview"/>

    <Button
        android:id="@+id/cancel_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_toRightOf="@+id/delete_button"
        android:layout_toEndOf="@+id/delete_button"
        android:layout_below="@id/name_editview"
        android:layout_marginLeft="10dp"/>

</RelativeLayout>