<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBerry"
    tools:context=".activity.SettingActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/date_textview"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_below="@id/my_toolbar"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/total_textview"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_below="@id/date_textview"/>
    <LinearLayout
        android:id="@+id/backup_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@color/colorLightBerry"
        android:layout_below="@id/total_textview">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backup_email" />
            <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/backup_textview" />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="10dp"
            android:id="@+id/backup_button"
            android:text="@string/backup"
            android:textSize="17sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/export_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorLightBerry"
        android:layout_below="@id/backup_linear"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/export_email" />
            <TextView
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/export_textview" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/export_button"
            android:text="@string/export"
            android:textSize="17sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorLightBerry"
        android:layout_marginTop="10dp"
        android:id="@+id/delete_picker_linear"
        android:layout_below="@id/export_linear">
        <AutoCompleteTextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:layout_height="match_parent"
            android:id="@+id/name_editview"
            android:hint="@string/full_name_id"/>
        <Button
            android:id="@+id/delete_picker_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/delete_picker"
            android:textSize="17sp"/>


    </LinearLayout>





</RelativeLayout>